tests/files/parser_tests/should_fail/009.cmdr
//Not an expression
x = 'x' 'y';